Added fields to Post

--- a/Vagabond.Reddit/Vagabond.Reddit.csproj
+++ b/Vagabond.Reddit/Vagabond.Reddit.csproj
@@ -52,6 +52,8 @@
     </Compile>
     <Compile Include="Post.cs" />
     <Compile Include="PostReader.cs" />
+    <Compile Include="UnixTimeStamp.cs" />
+    <Compile Include="UnixTimestampConverter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
