Moved Unix Timestamp converter to separate project

--- a/Vagabond.Reddit.IntegrationTests/Vagabond.Reddit.IntegrationTests.csproj
+++ b/Vagabond.Reddit.IntegrationTests/Vagabond.Reddit.IntegrationTests.csproj
@@ -57,6 +57,10 @@
       <Project>{1fc8e8a2-4e05-4c9c-a760-e9877f0a4a63}</Project>
       <Name>Vagabond.Reddit</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Vagabond.Things\Vagabond.Things.csproj">
+      <Project>{58beaa05-330e-4b3b-b1a8-8008d088e940}</Project>
+      <Name>Vagabond.Things</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
