--- a/Vagabond.Things/Vagabond.Things.csproj
+++ b/Vagabond.Things/Vagabond.Things.csproj
@@ -4,15 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1FC8E8A2-4E05-4C9C-A760-E9877F0A4A63}</ProjectGuid>
+    <ProjectGuid>{58BEAA05-330E-4B3B-B1A8-8008D088E940}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Vagabond.Reddit</RootNamespace>
-    <AssemblyName>Vagabond.Reddit</AssemblyName>
+    <RootNamespace>Vagabond.Things</RootNamespace>
+    <AssemblyName>Vagabond.Things</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -44,20 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="..\Vagabond\Properties\AssemblyInfo.cs">
       <Link>Properties\AssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="Post.cs" />
-    <Compile Include="PostReader.cs" />
+    <Compile Include="UnixTimeStamp.cs" />
+    <Compile Include="UnixTimestampConverter.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Vagabond.Things\Vagabond.Things.csproj">
-      <Project>{58beaa05-330e-4b3b-b1a8-8008d088e940}</Project>
-      <Name>Vagabond.Things</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
