--- a/Vagabond.Reddit/Vagabond.Reddit.csproj
+++ b/Vagabond.Reddit/Vagabond.Reddit.csproj
@@ -51,7 +51,7 @@
       <Link>Properties\AssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Post.cs" />
-    <Compile Include="PostReader.cs" />
+    <Compile Include="PostRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vagabond.Things\Vagabond.Things.csproj">
