--- a/Vagabond/Vagabond.csproj
+++ b/Vagabond/Vagabond.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Converters\UnixTimestampConverter.cs" />
+    <Compile Include="JsonConverters\UnixTimestampConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reddit\Post.cs" />
     <Compile Include="Reddit\RedditService.cs" />
