Created stubs for image twist and tumblr services

--- a/Vagabond.IntegrationTests/Vagabond.IntegrationTests.csproj
+++ b/Vagabond.IntegrationTests/Vagabond.IntegrationTests.csproj
@@ -46,8 +46,10 @@
     <Compile Include="..\Vagabond\Properties\AssemblyInfo.cs">
       <Link>Properties\AssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="ImageTwist\ImageTwistServiceTests.cs" />
     <Compile Include="Imgur\ImgurServiceTests.cs" />
     <Compile Include="Reddit\RedditServiceTests.cs" />
+    <Compile Include="Tumblr\TumblrServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -63,10 +65,7 @@
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ImageTwist\" />
-    <Folder Include="Tumblr\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
