--- a/Vagabond/Vagabond.csproj
+++ b/Vagabond/Vagabond.csproj
@@ -56,19 +56,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\Imgur.cs" />
+    <Compile Include="ImageTwist\ImageTwistService.cs" />
     <Compile Include="Imgur\ImgurService.cs" />
     <Compile Include="JsonConverters\UnixTimestampConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reddit\Post.cs" />
     <Compile Include="Reddit\RedditService.cs" />
+    <Compile Include="Tumblr\TumblrService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ImageTwist\" />
-    <Folder Include="Tumblr\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
